--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   table_calendar: ^3.0.6
-  provider: ^5.0.0
+  provider: ^6.0.3
   intl: ^0.17.0
-
+  url_launcher: ^5.4.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
