--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   table_calendar: ^3.0.6
   provider: ^6.0.3
   intl: ^0.17.0
-  url_launcher: ^5.4.0
+  whatsapp_unilink: ^2.0.1+1
+  url_launcher: ^6.1.5
   
 dev_dependencies:
   flutter_test:
