--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   provider: ^6.0.3
   intl: ^0.17.0
   whatsapp_unilink: ^2.0.1+1
-  url_launcher: ^6.1.5
+  url_launcher: 6.0.12
   
 dev_dependencies:
   flutter_test:
