--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   intl: ^0.17.0
   whatsapp_unilink: ^2.0.1+1
   url_launcher: ^6.1.5
-  flutter_slidable: ^0.5.7
+  flutter_slidable: ^0.6.0
+  brasil_fields: ^1.4.5
   
 dev_dependencies:
   flutter_test:
