--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   intl: ^0.17.0
   whatsapp_unilink: ^2.0.1+1
   url_launcher: 6.0.12
+  sqflite: ^2.0.3
+  flutter_staggered_grid_view: ^0.4.0-nullsafety.3
   
 dev_dependencies:
   flutter_test:
