--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,17 @@
 name: habits_now_app
 description: A new Flutter project.
-​
+
+publish_to: 'none'
+
 version: 1.0.0+1
-​
+
 environment:
   sdk: ">=2.17.5 <3.0.0"
-​
+
 dependencies:
   flutter:
     sdk: flutter
-​
+
   cupertino_icons: ^1.0.2
   table_calendar: ^3.0.6
   provider: ^6.0.3
@@ -25,12 +27,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-​
+
   flutter_lints: ^2.0.0
-​
+
 flutter:
   uses-material-design: true
 
   assets:
-    - HabitsNow/assets/img/
+    - assets/img/
   
