--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   url_launcher: ^6.0.12
   sqflite: ^2.0.3
   flutter_staggered_grid_view: ^0.4.0-nullsafety.3
+  path: ^1.8.0
   
 dev_dependencies:
   flutter_test:
